# supabase-py

./: .release-please-manifest.json  .sdk-parse-ignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  flake.nix  pyproject.toml  sdk-compliance.yaml
.github/workflows/: ci.yml  e2e-fastapi.yml  stale.yml  sync-compliance.yml  validate-capabilities.yml
docs/superpowers/plans/: 2026-06-23-fastapi-realtime-rule-engine.md
docs/superpowers/specs/: 2026-06-23-fastapi-realtime-rule-engine-design.md
examples/fastapi/: Makefile  README.md  config.py  dependencies.py  engine.py  friction_log.md  main.py  pyproject.toml  requirements.txt
examples/fastapi/.superpowers/sdd/: final-fix-report.md
examples/fastapi/routers/: auth.py  rules.py  tasks.py
examples/fastapi/supabase/: config.toml
examples/fastapi/supabase/migrations/: 001_initial.sql
examples/fastapi/templates/: base.html  index.html  rules.html  signin.html
examples/fastapi/tests/: conftest.py  test_auth.py  test_dependencies.py  test_engine.py  test_health.py  test_migration.py  test_rules.py  test_tasks.py
examples/fastapi/tests/e2e/: conftest.py  test_auth_e2e.py  test_engine_e2e.py  test_rules_e2e.py  test_tasks_e2e.py
src/auth/: pyproject.toml
src/auth/tests/: test_helpers.py
src/functions/: pyproject.toml
src/functions/tests/: test_client.py
src/postgrest/: pyproject.toml
src/postgrest/tests/: test_filter_builder.py
src/realtime/: README.md  pyproject.toml
src/realtime/tests/: test_connection.py  test_presence.py  (+1 more)
src/storage/: Makefile  pyproject.toml
src/supabase/: pyproject.toml
(+53 files in other folders)
